; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_fs-mgr.c_seaf_fs_manager_calculate_seafile_id_json.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_fs-mgr.c_seaf_fs_manager_calculate_seafile_id_json.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32*, i32 }

@.str = private unnamed_addr constant [5 x i8] c"type\00", align 1
@SEAF_METADATA_TYPE_FILE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [8 x i8] c"version\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"size\00", align 1
@.str.3 = private unnamed_addr constant [10 x i8] c"block_ids\00", align 1
@JSON_SORT_KEYS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @seaf_fs_manager_calculate_seafile_id_json(i32 %0, %struct.TYPE_3__* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca [41 x i8], align 16
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  store i32* %2, i32** %6, align 8
  %14 = call i32* (...) @json_object()
  store i32* %14, i32** %7, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = load i32, i32* @SEAF_METADATA_TYPE_FILE, align 4
  %17 = call i32 @json_object_set_int_member(i32* %15, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %16)
  %18 = load i32*, i32** %7, align 8
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @seafile_version_from_repo_version(i32 %19)
  %21 = call i32 @json_object_set_int_member(i32* %18, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i32 %20)
  %22 = load i32*, i32** %7, align 8
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 8
  %26 = call i32 @json_object_set_int_member(i32* %22, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i32 %25)
  %27 = call i32* (...) @json_array()
  store i32* %27, i32** %8, align 8
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 1
  %30 = load i32*, i32** %29, align 8
  store i32* %30, i32** %10, align 8
  store i32 0, i32* %9, align 4
  br label %31

31:                                               ; preds = %47, %3
  %32 = load i32, i32* %9, align 4
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 8
  %36 = icmp slt i32 %32, %35
  br i1 %36, label %37, label %50

37:                                               ; preds = %31
  %38 = load i32*, i32** %10, align 8
  %39 = getelementptr inbounds [41 x i8], [41 x i8]* %11, i64 0, i64 0
  %40 = call i32 @rawdata_to_hex(i32* %38, i8* %39, i32 20)
  %41 = load i32*, i32** %8, align 8
  %42 = getelementptr inbounds [41 x i8], [41 x i8]* %11, i64 0, i64 0
  %43 = call i32 @json_string(i8* %42)
  %44 = call i32 @json_array_append_new(i32* %41, i32 %43)
  %45 = load i32*, i32** %10, align 8
  %46 = getelementptr inbounds i32, i32* %45, i64 20
  store i32* %46, i32** %10, align 8
  br label %47

47:                                               ; preds = %37
  %48 = load i32, i32* %9, align 4
  %49 = add nsw i32 %48, 1
  store i32 %49, i32* %9, align 4
  br label %31

50:                                               ; preds = %31
  %51 = load i32*, i32** %7, align 8
  %52 = load i32*, i32** %8, align 8
  %53 = call i32 @json_object_set_new(i32* %51, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i64 0, i64 0), i32* %52)
  %54 = load i32*, i32** %7, align 8
  %55 = load i32, i32* @JSON_SORT_KEYS, align 4
  %56 = call i8* @json_dumps(i32* %54, i32 %55)
  store i8* %56, i8** %12, align 8
  %57 = load i8*, i8** %12, align 8
  %58 = call i32 @strlen(i8* %57)
  store i32 %58, i32* %13, align 4
  %59 = load i32*, i32** %6, align 8
  %60 = load i8*, i8** %12, align 8
  %61 = load i32, i32* %13, align 4
  %62 = call i32 @calculate_sha1(i32* %59, i8* %60, i32 %61)
  %63 = load i32*, i32** %7, align 8
  %64 = call i32 @json_decref(i32* %63)
  %65 = load i8*, i8** %12, align 8
  %66 = call i32 @free(i8* %65)
  ret void
}

declare dso_local i32* @json_object(...) #1

declare dso_local i32 @json_object_set_int_member(i32*, i8*, i32) #1

declare dso_local i32 @seafile_version_from_repo_version(i32) #1

declare dso_local i32* @json_array(...) #1

declare dso_local i32 @rawdata_to_hex(i32*, i8*, i32) #1

declare dso_local i32 @json_array_append_new(i32*, i32) #1

declare dso_local i32 @json_string(i8*) #1

declare dso_local i32 @json_object_set_new(i32*, i8*, i32*) #1

declare dso_local i8* @json_dumps(i32*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @calculate_sha1(i32*, i8*, i32) #1

declare dso_local i32 @json_decref(i32*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
